강의 등록시 서비스클래스에서 비효율적인 추상메서드 제거후 리팩토링